# sdk-py

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: sdk-port.mdc
.github/actions/publish-one/: action.yml
.github/workflows/: publish.yml  sdk-client-tests.yml  validate.yml
.mise/: config.toml
.mise/tasks/: generate
