[project]
name = "caido-sdk-workspace"
version = "0.0.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = ["ruff==0.15.5", "turms>=0.10.1", "ty==0.0.22"]

[tool.ty.src]
exclude = [
  "packages/caido-sdk-client/src/caido_sdk_client/graphql/__generated__/",
]
